@@ -1,3 +1,13 @@
+This is a game made by Dave Angelo Jimenez and Von Rolo Divino as a final requirement for CMSC 22: Object Oriented Programming.
+
+Code architecture was designed for scalability and for future projects. This makes the addition of new GameObjects and GameScenes a much easier process 
+
+Pixel Art Assets are created by Dave Angelo Jimenez using Aseprite.
+Background Musics are composed by Dave Angelo Jimenez using Beepbox.co and Audacity.
+
+## VM Arguments:
+--module-path "<Path to JavaFX SDK>" --add-modules javafx.controls,javafx.fxml,javafx.media
+
 ## Download important lib
 
 1. [JDBC for Database](https://jar-download.com/artifacts/org.xerial/sqlite-jdbc/3.20.1/source-code)
